--- a/Kards10/index.html
+++ b/Kards10/index.html
@@ -74,10 +74,11 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Juan Dela Cruz.</h1>
+	   			<h1>I'm Michael David Connell Jr.</h1>
 
 	   			<p class="intro-position">
-	   				<span>Front-end Developer</span>
+					<span>Software Developer</span> 
+					<span>Front-end and Back-end Developer</span>
 	   				<span>UI/UX Designer</span> 
 	   			</p>
 
@@ -113,7 +114,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Lorem ipsum Exercitation culpa qui dolor consequat exercitation fugiat laborum ex ea eiusmod ad do aliqua occaecat nisi ad irure sunt id pariatur Duis laboris amet exercitation veniam labore consectetur ea id quis eiusmod.</p>
+   				<p class="lead">"I'm an aspiring Software Development Engineer with a passion for learning and collaborating on projects. I recently completed training in Python at the California Institute of Art and Technology, and I'm currently learning HTML and CSS. While much of my experience has been personal and self-taught, I have skills in network setup and troubleshooting, including Net+ and Sec+ knowledge, as well as experience with Cisco and SharePoint. I'm currently working towards certifications in these areas, as well as a BS in Software Development and Network Engineering, to help me reach my goal of becoming a professional in the software development field."</p>
    			</div>   			
 
    		</div>   		
@@ -124,28 +125,28 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p>Friend, Father, Drummer, and Aspiring Software Developer</p>
 
    			<ul class="info-list">
    				<li>
    					<strong>Fullname:</strong>
-   					<span>Juan Dela Cruz</span>
+   					<span>Michael David Connell</span>
    				</li>
    				<li>
    					<strong>Birth Date:</strong>
-   					<span>September 28, 1987</span>
+   					<span>September 24, 1975</span>
    				</li>
    				<li>
    					<strong>Job:</strong>
-   					<span>Freelancer, Frontend Developer</span>
+   					<span>Full Time Student, Team Player</span>
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span>www.kardswebsite.com</span>
+   					<span>https://spaun12.github.io/michaelconnell.github.io/</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>me@kardswebsite.com</span>
+   					<span>michael.connell1@gmail.com</span>
    				</li>
 
    			</ul> <!-- /info-list -->
@@ -155,29 +156,29 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p>Python, CSS3, HTML 5, Process Improvement/Problem Solver, and Easy to work with.</p>
 
 				<ul class="skill-bars">
 				   <li>
-				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>HTML5</strong>
+				   	<div class="progress percent45"><span>45%</span></div>
+				   	<strong>Python</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
+				   	<div class="progress percent30"><span>30%</span></div>
 				   	<strong>CSS3</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>JQuery</strong>
+				   	<div class="progress percent30"><span>30%</span></div>
+				   	<strong>HTML 5</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent95"><span>95%</span></div>
-				   	<strong>PHP</strong>
+				   	<strong>PIPS</strong>
 				   </li>
 				   <li>
 
-				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>Wordpress</strong>
+				   	<div class="progress percent75"><span>100%</span></div>
+				   	<strong>ET2W</strong>
 				   </li>
       
 				</ul> <!-- /skill-bars -->		
