--- a/Kards10/index.html
+++ b/Kards10/index.html
@@ -207,7 +207,7 @@
    			<h5>Resume</h5>
    			<h1>More of my credentials.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead"> Tech Fiend, Veteran, Office Manager, Drug and Alcohol Counselor, Security, Soldier, Grief Response Coordinator</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -231,13 +231,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>UI Designer</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>Disease Intervention Specialist</h3>
+	   					<p>JAN 2022 - March 2022</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Awesome Studio</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<h4>Kansas Department of Health and Environment</h4>
+	   					<p>Amazing Mission and Great Supervisor.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -249,13 +249,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Front-end Developer</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>Time and Leave Clerk</h3>
+	   					<p>May 2020 - JAN 2022</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Super Cool Agency</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Department of Veteran Affairs, CPAC</h4>
+	   					<p>Worked alongside more than 500 coworkers ensuring timely and accurate records for Payroll and Leave. Helped improve process of communication ensuring accuracy.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
