--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Michael David Connell Jr.</h1>
+	   			<h1>I'm Michael D. Connell Jr.</h1>
 
 	   			<p class="intro-position">
 					<span>Software Developer</span> 
@@ -267,13 +267,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Web Designer</h3>
-	   					<p>May 2013 - June 2014</p>
+	   					<h3>Shop Manager</h3>
+	   					<p>May 2018 - May 2020</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Great Designs Studio</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Laven Electric</h4>
+	   					<p>Managed a fleet of Vehicles, Millions of dollars in inventory, coordinated project/site inventory for both tools and parts. One of the best experiences in my life.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
