--- a/index.html
+++ b/index.html
@@ -303,13 +303,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Master Degree</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>Currently attending College working towards BS in Software Development</h3>
+	   					<p>Jan 2023 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>University of Life</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<h4>CIAT (California Institute of Art and Technology</h4>
+	   					<p>Helping me bring together my self study into a solid degree and portfolio.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -321,13 +321,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>AIT</h3>
+	   					<p>July 2021 - June 2022</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>State Design University</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Online IT Bootcamp Training</h4>
+	   					<p>Training sucessfully completed for ITIL4, A+, NET+, Sec+, CEH. Decided to do further exploration prior to gaining certifications. Best decision at the time. Working on them as I go with the latest online training available.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -339,13 +339,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>May 2013 - June 2014</p>
+	   					<h3>Military Training</h3>
+	   					<p>October 2003 - July 2015</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Design College</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>DOD</h4>
+	   					<p>Training in Behavioral Health, Alcohol and substance abuse groupe counseling, Griefe Response Coordination, NCOIC Warrior Leader Training, First Aid and Combatives, and many others which can be provided on request.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
