--- a/index.html
+++ b/index.html
@@ -267,13 +267,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Web Designer</h3>
-	   					<p>May 2013 - June 2014</p>
+	   					<h3>Shop Manager</h3>
+	   					<p>March 2028 - May 2020</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Great Designs Studio</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Laven Electric</h4>
+	   					<p>Managed a fleet of vehicles and tools. Mantained shop supplies and project inventory. Directly supervised shop personel.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
