--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@
 					</div>
 
 					<div class="timeline-header">
-						<h3>Bachelor Degree</h3>
-						<p>July 2014 - June 2015</p>
+						<h3>ACI Learning</h3>
+						<p>July 2020 - June 2021</p>
 					</div>
 
 					<div class="timeline-content">
