Updates and Learning

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Michael David Connell Jr.</h1>
+	   			<h1>I'm Michael D. Connell Jr.</h1>
 
 	   			<p class="intro-position">
 					<span>Software Developer</span> 
-					<span>Front-end and Back-end Developer</span>
+					<span>Full-Stack/DevOps</span>
 	   				<span>UI/UX Designer</span> 
 	   			</p>
 
