--- a/index.html
+++ b/index.html
@@ -267,12 +267,12 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Shop Manager</h3>
-	   					<p>March 2028 - May 2020</p>
+	   					<p>March 2018 - May 2020</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>Laven Electric</h4>
-	   					<p>Managed a fleet of vehicles and tools. Mantained shop supplies and project inventory. Directly supervised shop personel.</p>
+	   					<p>Managed a fleet of vehicles and tools. Mantained shop supplies and project inventory. Directly supervised shop personnel.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -302,12 +302,12 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Master Degree</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>In College</h3>
+	   					<p>January 2023 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>University of Life</h4>
+	   					<h4>CIAT</h4>
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
 	   				</div>
 
