--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>CIAT</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<p>Currently In the Software Development track at California Institute of Art and Technology. Have already made a cohort of classmates and I am excited for the future.</p>
 	   				</div>
 
 				</div> <!-- /timeline-block -->
@@ -325,8 +325,8 @@
 					</div>
 
 					<div class="timeline-content">
-						<h4>State Design University</h4>
-						<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+						<h4>Online IT Bootcamp</h4>
+						<p>Completed and passed all of the training the the Cyber Security Track. Currently working towards recieving Certifications and bolstering with latest techniques and tech learned aat CIAT.</p>
 					</div>
 
 				</div> <!-- /timeline-block -->
