--- a/index.html
+++ b/index.html
@@ -338,13 +338,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>May 2013 - June 2014</p>
+	   					<h3>Military and Behevioral Health</h3>
+	   					<p>October 2003 - July 2016</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Design College</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>DOD</h4>
+	   					<p>Received highly technical training in the Medical field in the Military. Primary being Behavioral Health as my specialty. I also recieved additional training in Group Counseling, Grief response coordination, and other specialties not given to everyone in my field. Management and leadership were also taught an the opportunities to lead, and build within my community. THis experience gives valuable skills sought for in any successful team.  </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
