--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>DOD</h4>
-	   					<p>Received highly technical training in the Medical field in the Military. Primary being Behavioral Health as my specialty. I also recieved additional training in Group Counseling, Grief response coordination, and other specialties not given to everyone in my field. Management and leadership were also taught an the opportunities to lead, and build within my community. THis experience gives valuable skills sought for in any successful team.  </p>
+	   					<p>Received highly technical training in the Medical field in the Military. Primary being Behavioral Health as my specialty. I also recieved additional training in Group Counseling, Grief response coordination, and other specialties not given to everyone in my field. Management and leadership were also taught an the opportunities to lead, and build within my community. This experience gives valuable skills sought for in any successful team.  </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
