--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>michael.connell1@gmail.com</span>
+   					<span>michael.connell.techvet@gmail.com</span>
    				</li>
 
    			</ul> <!-- /info-list -->
