--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">"I'm an aspiring Software Development Engineer with a passion for learning and collaborating on projects. I recently completed training in Python at the California Institute of Art and Technology, and I'm currently learning HTML and CSS. While much of my experience has been personal and self-taught, I have skills in network setup and troubleshooting, including Net+ and Sec+ knowledge, as well as experience with Cisco and SharePoint. I'm currently working towards certifications in these areas, as well as a BS in Software Development and Network Engineering, to help me reach my goal of becoming a professional in the software development field."</p>
+   				<p class="lead">"I'm an aspiring Software Development Engineer with a passion for learning and collaborating on projects. I recently completed training in Python at the California Institute of Art and Technology, and I'm currently learning HTML and CSS. While much of my experience has been personal and self-taught, I have skills in network setup and troubleshooting, including Net+ and Sec+ knowledge, as well as experience with Cisco and SharePoint. I'm currently working towards certifications in these areas, as well as a BS in Software Development and Network Engineering, to help me reach my goal of becoming a professional Software and DevOps."</p>
    			</div>   			
 
    		</div>   		
