--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">Liberty</h3>	     					    
+		     					       <h3 class="folio-title">Visual Symphony</h3>
 		     					    	 <span class="folio-types">
 		     					       	  Graphic Design
 		     					       </span>
@@ -402,7 +402,7 @@
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Shutterbug</h3>	     					    
+	                     		<h3 class="folio-title">Site Sculptures</h3>
 		     					    	<span class="folio-types">
 		     					       	  Web Design
 		     					      </span>		     		
@@ -418,9 +418,9 @@
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Clouds</h3>	     					    
+	                     		<h3 class="folio-title">Pocket Powerhouses</h3>
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  Mobile App Development
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -434,9 +434,9 @@
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Beetle</h3>	     					    
+	                     		<h3 class="folio-title">Seamless Synergies</h3>
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  (UX) Design
 		     					      </span>		     		
 		     					   </div>  	                      	
 	                     </div>                    
