--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">Site Sculptures</h3>
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  Web Design and Development
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -450,9 +450,9 @@
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Lighthouse</h3>	     					    
+	                     		<h3 class="folio-title">Quantitative Quests</h3>
 		     					    	<span class="folio-types">
-		     					       	  Web Development
+		     					       	  Data Science
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -466,9 +466,9 @@
 	                  <a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Salad</h3>	     					    
+	                     		<h3 class="folio-title">e-Marketing Enigma</h3>
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  Digital Marketing
 		     					      </span>		     		
 		     					   </div>	                      	
 	                     </div>                    
