--- a/Kards10/index.html
+++ b/Kards10/index.html
@@ -371,7 +371,29 @@
 
    			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
 
-   		</div>   		
+   		</div> 
+		   <div class="calculator">
+			<input type="text" id="result" value="0" disabled>
+			<button onclick="clearResult()">C</button>
+			<button onclick="backspace()">&larr;</button>
+			<button onclick="insert('+')">+</button>
+			<button onclick="insert('-')">-</button>
+			<button onclick="insert('*')">*</button>
+			<button onclick="insert('/')">/</button>
+			<button onclick="calculate()">=</button>
+			<button onclick="insert('7')">7</button>
+			<button onclick="insert('8')">8</button>
+			<button onclick="insert('9')">9</button>
+			<button onclick="insert('4')">4</button>
+			<button onclick="insert('5')">5</button>
+			<button onclick="insert('6')">6</button>
+			<button onclick="insert('1')">1</button>
+			<button onclick="insert('2')">2</button>
+			<button onclick="insert('3')">3</button>
+			<button onclick="insert('0')">0</button>
+			<button onclick="insert('.')">.</button>
+		  </div>
+					
    	</div> <!-- /section-intro--> 
 
    	<div class="row portfolio-content">
